err/makeitso.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/MakeItSo-0.6.1.egg-info'...
Listing './lib/python3.5/site-packages/Tempita-0.5.2.egg-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/makeitso'...
Compiling './lib/python3.5/site-packages/makeitso/makeitso.py'...
***   File "./lib/python3.5/site-packages/makeitso/makeitso.py", line 153
    except NameError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/makeitso/python_module'...
Listing './lib/python3.5/site-packages/makeitso/python_module/tests'...
Compiling './lib/python3.5/site-packages/makeitso/python_module/tests/test.py'...
***   File "./lib/python3.5/site-packages/makeitso/python_module/tests/test.py", line 33
    except doctest.DocTestFailure, failure:
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/makeitso/python_package'...
Compiling './lib/python3.5/site-packages/makeitso/python_package/INSTALL.py'...
***   File "./lib/python3.5/site-packages/makeitso/python_package/INSTALL.py", line 50
    if os.path.exists(_python)
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/makeitso/python_package/tests'...
Compiling './lib/python3.5/site-packages/makeitso/python_package/tests/test_{{package}}.py'...
***   File "./lib/python3.5/site-packages/makeitso/python_package/tests/test_{{package}}.py", line 16
    class {{package}}UnitTest(unittest.TestCase):
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/makeitso/python_package/{{package}}'...
Compiling './lib/python3.5/site-packages/makeitso/python_package/{{package}}/template.py'...
***   File "./lib/python3.5/site-packages/makeitso/python_package/{{package}}/template.py", line 12
    class {{project}}Template(MakeItSoTemplate):
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/makeitso/python_package/{{package}}/web.py'...
***   File "./lib/python3.5/site-packages/makeitso/python_package/{{package}}/web.py", line 41
    app=app)
      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tempita'...
Listing './lib/python3.5/site-packages/webob'...
Listing './share'...
Listing './share/python-wheels'...
